Fri Sep  2 10:57:12 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* configure.in: applied the 3 patches from TomPh plus a bit of
	  tweaking to not enable the debug api by default

2005-08-24  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_is_link): Revert my last change.

2005-08-23  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_is_link): Use IFLNK instead of ISLNK.

2005-08-22  John McCutchan  <ttb@tentacle.dhs.org>

	* configure.in: White noise.
	* python/tests/dnotify2.py: Print some debug output.
	* server/gam_debugging.h: Remove the inotify definitions (they were never
	used).
	* server/gam_poll_basic.c: (gam_poll_basic_poll_file): Fix a poll limiter
	bug.
	* server/gam_poll_generic.c: (gam_poll_generic_remove_missing): Remove an
	assertion that was causing a crash.
	(gam_poll_generic_scan_directory_internal): Fix a poll limiter bug

2005-08-19  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_poll_dnotify.c: (gam_poll_dnotify_scan_callback): Sprinkle in
	some asserts.

2005-08-19  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_poll_basic.c: (gam_poll_basic_poll_file),
	(gam_poll_basic_scan_callback): Fix another crasher.

2005-08-19  John McCutchan  <ttb@tentacle.dhs.org>

	* TODO: Clarify a TODO item.
	* lib/gam_error.c: (gam_error_handle_signal), (gam_error_signal),
	(gam_error_init), (gam_error_check), (gam_errno), (gam_error),
	(gam_debug): Fix a bug in starting up /tmp/gamin debug stream.
	* server/gam_poll_generic.c:
	(gam_poll_generic_scan_directory_internal): Fix crasher.

2005-08-19  John McCutchan  <ttb@tentacle.dhs.org>

	Patch from TomPh <tpgww@onepost.net>

	* configure.in: Properly define HAVE_LINUX when configured with
	--disable-kernel. Clear up build options. debug & debug-api disabled by
	default unless CVS directory exists. Use -Ox optimization only when -g is not
	used.
	* server/Makefile.am: make some _SOURCES conditional on ENABLE_INOTIFY &
	ENABLE_DNOTIFY.
